--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,10 @@
+@import url("https://fonts.cdnfonts.com/css/helvetica-neue-5");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 @layer base {
